refactor: modernize
also add combat gear to general requirement, and food to general recommended